res/examples/invalid/fn_expr_mismatch_return_identifier_declared_in_body.eg
(): () => {
    type Int = number;
    let a: number = 5;
    let b: Int = a + 10;
    b
};

// out: TypeError: mismatched types: expected type `()` but received `number`
// TODO: See: https://github.com/egonlang/egonlang/issues/19